[gd_scene load_steps=6 format=3 uid="uid://bcv40fcphjv3m"]

[ext_resource type="Script" uid="uid://qu65ebbkmrhx" path="res://scripts/player/player.gd" id="1_qhqgy"]
[ext_resource type="Script" uid="uid://dntg3ga86vnxk" path="res://scripts/player/player_sm.gd" id="2_gmlin"]
[ext_resource type="PackedScene" uid="uid://b81qx5c25q7p2" path="res://scenes/general/hitbox.tscn" id="4_gmlin"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8afob"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lvxji"]

[node name="player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_qhqgy")
can_run = false
can_jump = false
can_crouch = false
can_dash = false
can_double_jump = false
walk_speed = 3
metadata/_custom_type_script = "uid://qu65ebbkmrhx"

[node name="collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_8afob")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 1.6)

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.63256, -1.64506)
current = true

[node name="PSM" type="Node" parent="."]
script = ExtResource("2_gmlin")

[node name="timers" type="Node" parent="."]

[node name="dash_timer" type="Timer" parent="timers"]
one_shot = true

[node name="dash_cooldown_timer" type="Timer" parent="timers"]
one_shot = true

[node name="coyote_timer" type="Timer" parent="timers"]

[node name="hitbox" parent="." instance=ExtResource("4_gmlin")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0.9, 0)
script = null

[node name="collider" type="CollisionShape3D" parent="hitbox"]
shape = SubResource("CapsuleShape3D_lvxji")

[connection signal="timeout" from="timers/dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="timers/dash_cooldown_timer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="timers/coyote_timer" to="." method="_on_coyote_timer_timeout"]
